--- a/package/crds/cloudfunctions.gcp.upbound.io_functions.yaml
+++ b/package/crds/cloudfunctions.gcp.upbound.io_functions.yaml
@@ -458,81 +458,6 @@ spec:
                       and PRIVATE_RANGES_ONLY. Defaults to PRIVATE_RANGES_ONLY. If
                       unset, this field preserves the previously set value.
                     type: string
-                  vpcConnectorRef:
-                    description: Reference to a Connector in vpcaccess to populate
-                      vpcConnector.
-                    properties:
-                      name:
-                        description: Name of the referenced object.
-                        type: string
-                      policy:
-                        description: Policies for referencing.
-                        properties:
-                          resolution:
-                            default: Required
-                            description: Resolution specifies whether resolution of
-                              this reference is required. The default is 'Required',
-                              which means the reconcile will fail if the reference
-                              cannot be resolved. 'Optional' means this reference
-                              will be a no-op if it cannot be resolved.
-                            enum:
-                            - Required
-                            - Optional
-                            type: string
-                          resolve:
-                            description: Resolve specifies when this reference should
-                              be resolved. The default is 'IfNotPresent', which will
-                              attempt to resolve the reference only when the corresponding
-                              field is not present. Use 'Always' to resolve the reference
-                              on every reconcile.
-                            enum:
-                            - Always
-                            - IfNotPresent
-                            type: string
-                        type: object
-                    required:
-                    - name
-                    type: object
-                  vpcConnectorSelector:
-                    description: Selector for a Connector in vpcaccess to populate
-                      vpcConnector.
-                    properties:
-                      matchControllerRef:
-                        description: MatchControllerRef ensures an object with the
-                          same controller reference as the selecting object is selected.
-                        type: boolean
-                      matchLabels:
-                        additionalProperties:
-                          type: string
-                        description: MatchLabels ensures an object with matching labels
-                          is selected.
-                        type: object
-                      policy:
-                        description: Policies for selection.
-                        properties:
-                          resolution:
-                            default: Required
-                            description: Resolution specifies whether resolution of
-                              this reference is required. The default is 'Required',
-                              which means the reconcile will fail if the reference
-                              cannot be resolved. 'Optional' means this reference
-                              will be a no-op if it cannot be resolved.
-                            enum:
-                            - Required
-                            - Optional
-                            type: string
-                          resolve:
-                            description: Resolve specifies when this reference should
-                              be resolved. The default is 'IfNotPresent', which will
-                              attempt to resolve the reference only when the corresponding
-                              field is not present. Use 'Always' to resolve the reference
-                              on every reconcile.
-                            enum:
-                            - Always
-                            - IfNotPresent
-                            type: string
-                        type: object
-                    type: object
                 required:
                 - region
                 type: object
@@ -770,6 +695,11 @@ spec:
                       Endpoint is returned as https_trigger_url. Cannot be used with
                       event_trigger.'
                     type: boolean
+                  vpcConnector:
+                    description: The VPC Network Connector that this cloud function
+                      can connect to. It should be set up as fully-qualified URI.
+                      The format of this field is projects/*/locations/*/connectors/*.
+                    type: string
                   vpcConnectorEgressSettings:
                     description: The egress settings for the connector, controlling
                       what traffic is diverted through it. Allowed values are ALL_TRAFFIC
