--- a/package/crds/cloudrun.gcp.upbound.io_v2services.yaml
+++ b/package/crds/cloudrun.gcp.upbound.io_v2services.yaml
@@ -867,84 +867,6 @@ spec:
                                 description: 'VPC Access connector name. Format: projects/{project}/locations/{location}/connectors/{connector},
                                   where {project} can be project id or number.'
                                 type: string
-                              connectorRef:
-                                description: Reference to a  to populate connector.
-                                properties:
-                                  name:
-                                    description: Name of the referenced object.
-                                    type: string
-                                  policy:
-                                    description: Policies for referencing.
-                                    properties:
-                                      resolution:
-                                        default: Required
-                                        description: Resolution specifies whether
-                                          resolution of this reference is required.
-                                          The default is 'Required', which means the
-                                          reconcile will fail if the reference cannot
-                                          be resolved. 'Optional' means this reference
-                                          will be a no-op if it cannot be resolved.
-                                        enum:
-                                        - Required
-                                        - Optional
-                                        type: string
-                                      resolve:
-                                        description: Resolve specifies when this reference
-                                          should be resolved. The default is 'IfNotPresent',
-                                          which will attempt to resolve the reference
-                                          only when the corresponding field is not
-                                          present. Use 'Always' to resolve the reference
-                                          on every reconcile.
-                                        enum:
-                                        - Always
-                                        - IfNotPresent
-                                        type: string
-                                    type: object
-                                required:
-                                - name
-                                type: object
-                              connectorSelector:
-                                description: Selector for a  to populate connector.
-                                properties:
-                                  matchControllerRef:
-                                    description: MatchControllerRef ensures an object
-                                      with the same controller reference as the selecting
-                                      object is selected.
-                                    type: boolean
-                                  matchLabels:
-                                    additionalProperties:
-                                      type: string
-                                    description: MatchLabels ensures an object with
-                                      matching labels is selected.
-                                    type: object
-                                  policy:
-                                    description: Policies for selection.
-                                    properties:
-                                      resolution:
-                                        default: Required
-                                        description: Resolution specifies whether
-                                          resolution of this reference is required.
-                                          The default is 'Required', which means the
-                                          reconcile will fail if the reference cannot
-                                          be resolved. 'Optional' means this reference
-                                          will be a no-op if it cannot be resolved.
-                                        enum:
-                                        - Required
-                                        - Optional
-                                        type: string
-                                      resolve:
-                                        description: Resolve specifies when this reference
-                                          should be resolved. The default is 'IfNotPresent',
-                                          which will attempt to resolve the reference
-                                          only when the corresponding field is not
-                                          present. Use 'Always' to resolve the reference
-                                          on every reconcile.
-                                        enum:
-                                        - Always
-                                        - IfNotPresent
-                                        type: string
-                                    type: object
-                                type: object
                               egress:
                                 description: 'Traffic VPC egress settings. Possible
                                   values are: ALL_TRAFFIC, PRIVATE_RANGES_ONLY.'
@@ -1590,6 +1512,10 @@ spec:
                             Structure is documented below.
                           items:
                             properties:
+                              connector:
+                                description: 'VPC Access connector name. Format: projects/{project}/locations/{location}/connectors/{connector},
+                                  where {project} can be project id or number.'
+                                type: string
                               egress:
                                 description: 'Traffic VPC egress settings. Possible
                                   values are: ALL_TRAFFIC, PRIVATE_RANGES_ONLY.'
