--- a/package/crds/container.gcp.upbound.io_nodepools.yaml
+++ b/package/crds/container.gcp.upbound.io_nodepools.yaml
@@ -343,6 +343,11 @@ spec:
                           type: array
                         imageType:
                           type: string
+                        index:
+                          default: "0"
+                          description: This is an injected field with a default value
+                            for being able to merge items of the parent object list.
+                          type: string
                         kubeletConfig:
                           items:
                             properties:
@@ -553,6 +558,9 @@ spec:
                           type: array
                       type: object
                     type: array
+                    x-kubernetes-list-map-keys:
+                    - index
+                    x-kubernetes-list-type: map
                   nodeCount:
                     description: |-
                       The number of nodes per instance group. This field can be used to
@@ -856,6 +864,11 @@ spec:
                           type: array
                         imageType:
                           type: string
+                        index:
+                          default: "0"
+                          description: This is an injected field with a default value
+                            for being able to merge items of the parent object list.
+                          type: string
                         kubeletConfig:
                           items:
                             properties:
@@ -1066,6 +1079,9 @@ spec:
                           type: array
                       type: object
                     type: array
+                    x-kubernetes-list-map-keys:
+                    - index
+                    x-kubernetes-list-type: map
                   nodeCount:
                     description: |-
                       The number of nodes per instance group. This field can be used to
@@ -1552,6 +1568,11 @@ spec:
                           type: array
                         imageType:
                           type: string
+                        index:
+                          default: "0"
+                          description: This is an injected field with a default value
+                            for being able to merge items of the parent object list.
+                          type: string
                         kubeletConfig:
                           items:
                             properties:
@@ -1686,6 +1707,9 @@ spec:
                           type: array
                       type: object
                     type: array
+                    x-kubernetes-list-map-keys:
+                    - index
+                    x-kubernetes-list-type: map
                   nodeCount:
                     description: |-
                       The number of nodes per instance group. This field can be used to
