--- a/package/crds/dataflow.gcp.upbound.io_jobs.yaml
+++ b/package/crds/dataflow.gcp.upbound.io_jobs.yaml
@@ -35,7 +35,11 @@ spec:
     schema:
       openAPIV3Schema:
         description: Job is the Schema for the Jobs API. Creates a job in Dataflow
-          according to a provided config file.
+          according to a provided config file. Dataflow jobs are different from most
+          other Google resources. The Dataflow resource is considered 'existing' while
+          it is in a nonterminal state. If it reaches a terminal state (e.g. 'FAILED',
+          'COMPLETE', 'CANCELLED'), it will be recreated on the next 'reconcile'.
+          This resource does not support import
         properties:
           apiVersion:
             description: |-
